<resources>
    <string name="app_name">Gol Brahm Samaj</string>

    <!-- Strings related to login -->
    <string name="master_url">http://kaladrishti.co.in/</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_contact">Contact No</string>
    <string name="prompt_city">City</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_dob">Select Birth Date</string>
</resources>
